--- a/ece_201806219/ece_201806219.vcxproj.filters
+++ b/ece_201806219/ece_201806219.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Arrangements.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ece_201806219.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Arrangements.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
