Last version before meeting Ece

--- a/ece_201806219/ece_201806219.vcxproj
+++ b/ece_201806219/ece_201806219.vcxproj
@@ -148,12 +148,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Arrangements.h" />
+    <ClInclude Include="Fibonacci.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Arrangements.cpp" />
     <ClCompile Include="ece_201806219.cpp" />
+    <ClCompile Include="Fibonacci.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
