--- a/ece_201806219/ece_201806219.vcxproj.filters
+++ b/ece_201806219/ece_201806219.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="Arrangements.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Fibonacci.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -33,6 +36,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Arrangements.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Fibonacci.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
